# dbt-cost-guard

./: .dbt-cost-guard.yml.example  .gitignore  ARCHITECTURE.md  COMPLETE.md  CONTRIBUTING.md  ENHANCED_TEST_SETUP.md  HACKATHON.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALLATION.md  LARGE_DATA_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  QUICK_SUMMARY.md  README.md  README_OLD.md  SETUP.md  SUCCESS_SUMMARY.md  USAGE.md  check_complex_model_cost.sql  check_table_stats.sql  cleanup_for_public.sh  create_large_datasets.sql  demo.sh  demo_insane_models.sh  prepare_for_github.sh  pyproject.toml  requirements.txt  setup_demo.sh  setup_enhanced_snowflake.sql  setup_snowflake.sql  test_expensive_query.sql  ultra_expensive_queries.sql  validate_costs.sql  validate_one_model.sh  verify.sh
.github/workflows/: publish.yml  test.yml
dbt_cost_guard/: __init__.py  cli.py  config.py  estimator.py  snowflake_utils.py
docs/: REAL_WORLD_USAGE.md  RUN_AND_VALIDATE.md
example_project/: .dbt-cost-guard.yml  .user.yml  README.md  dbt_project.yml  profiles.yml.example
example_project/models/: sources.yml
example_project/models/marts/: daily_product_metrics.sql  dim_customers.sql  fct_order_items.sql
example_project/models/staging/: stg_orders.sql  stg_products.sql  stg_users.sql
examples/: check_actual_cost.sql  setup_venv.sh
examples/snowflake_setup/: scale_up_data.sql
test_project/: .dbt-cost-guard.yml  .user.yml  INSANE_MODELS.md  README.md  dbt_project.yml  profiles.yml.example
test_project/models/: sources.yml
test_project/models/marts/dimensions/: dim_customers.sql
test_project/models/marts/facts/: fct_cartesian_nightmare.sql  fct_cross_database_monster.sql  fct_customer_analytics_extreme.sql  fct_daily_web_metrics.sql  fct_mega_expensive.sql  fct_orders_enriched.sql  fct_self_join_explosion.sql  fct_ultra_expensive_demo.sql  fct_web_events_sessionized.sql
test_project/models/staging/: stg_analytics__web_events.sql  stg_reference__geography.sql  stg_sales__customers.sql  stg_sales__order_items.sql  stg_sales__orders.sql
tests/: __init__.py  test_config.py  test_estimator.py  test_snowflake_utils.py
